2008-01-29	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* configure.in:
	made 1.0.5 release

	* README:
	* ima/dialogs/about.ui:
	* ima/resources/splash.png:
	extended copyright-notice from 2007 to 2008

	* lib/include/local_system.h:
	* lib/src/local_system.cpp:
	* setup/src/dialogs.cpp:
	- use Win32-API for determining program-files folder (closes #1846814)
	- use %temp% and %tmp% environment-variables instead of C:\temp if
	  possible (closes #1879580)

	* ima/src/main_window.h:
	* ima/src/main_window.cpp:
	* ima/src/main.cpp:
	added "-screen"-argument which makes it possible to specify which
	screen the remote-control-window should be displayed on

	* ica/ica.rc.in:
	* ima/italc.rc.in:
	fixed FILEVERSION-info-tag

	* ica/Makefile.am:
	made ICA a non-console-application in order to make it usable when
	running as normal application instead of service

	* COPYING:
	* lib/include/dsa_key.h:
	* lib/src/dsa_key.cpp:
	added permission to link iTALC against OpenSSL library

	* ima/resources/uk.qm:
	* ima/resources/uk.qm:
	updated Ukrainian localization

2008-01-14	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/ica.qrc:
	* ica/resources/uk.qm:
	* ica/resources/uk.ts:
	* setup/setup.qrc:
	* setup/resources/uk.qm:
	* setup/resources/uk.ts:
	* ima/italc.qrc:
	* ima/resources/uk.qm:
	* ima/resources/uk.qm:
	* lib/italc_core.qrc:
	* lib/resources/uk.qm:
	* lib/resources/uk.ts:
	added Ukrainian localization-files by Yuri Chornoivan
	<yurchor/at/ukr/dot/net>

2008-01-14	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ima/src/classroom_manager.cpp:
	fixed typo

2007-12-23	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/ica.qrc:
	* ica/resources/cs.qm:
	* ica/resources/cs.ts:
	* setup/setup.qrc:
	* setup/resources/cs.qm:
	* setup/resources/cs.ts:
	* ima/italc.qrc:
	* ima/resources/cs.qm:
	* ima/resources/cs.qm:
	* lib/italc_core.qrc:
	* lib/resources/zh.qm:
	* lib/resources/zh.ts: